Creacion Login cuenta existente y login registro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">DSMProyectoCatedraAC180847MM200149MH192214GC180313</string>
+    <string name="button_login">LOGIN</string>
+    <string name="users_login">Usuario</string>
+    <string name="users_password">Contraseña</string>
+    <string name="forget_password">¿Has olvidado tu contraseña?</string>
+    <string name="Dont_have_account">¿No tienes una cuenta?</string>
+    <string name="register">Registrate</string>
+    <string name="start">¡Empecemos!</string>
+    <string name="name">Nombre</string>
+    <string name="email">Correo</string>
+    <string name="confirmPassword">Confirmar Contraseña</string>
+    <string name="button_create">CREAR</string>
+    <string name="have_account">¿Ya tienes una cuenta?</string>
+    <string name="here">Entre aqui</string>
 </resources>
