--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,19 @@
     <string name="Btn_LogIn">Ingresar</string>
     <string name="Register">No tienes una cuenta? Registrate</string>
 
+    <string name="users_login">Usuario</string>
+    <string name="users_password">Contraseña</string>
+    <string name="forget_password">¿Has olvidado tu contraseña?</string>
+    <string name="Dont_have_account">¿No tienes una cuenta?</string>
+    <string name="register">Registrate</string>
+    <string name="start">¡Empecemos!</string>
+    <string name="name">Nombre</string>
+    <string name="email">Correo</string>
+    <string name="confirmPassword">Confirmar Contraseña</string>
+    <string name="button_create">CREAR</string>
+    <string name="have_account">¿Ya tienes una cuenta?</string>
+    <string name="here">Entre aqui</string>
+
+
+
 </resources>
